log
Thu, Mar 20, 2025  5:19:26 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:54:31 PM: 
 exercises.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:81:25: error: comparison between pointer and integer [-Werror]
       if (elem_eleminar == elem)
                         ^~
exercises.c: In function 'copia_pila':
exercises.c:99:13: error: unused variable 'elemento' [-Werror=unused-variable]
       void* elemento = top(P1);
             ^~~~~~~~
exercises.c:97:11: error: unused variable 'pila_aux' [-Werror=unused-variable]
    Stack* pila_aux =create_stack();
           ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
056c3f7
